fixet gap

--- a/src/scss/components/resources.scss
+++ b/src/scss/components/resources.scss
@@ -49,6 +49,9 @@
         font-size: 12px;
         margin-bottom: 16px;
       }
+      @include media('<phone'){
+        padding-top: 0;
+      }
     }
   }
 
